plugins {
    id 'java'
}

ext.paperVersion = "1.16.5-R0.1-SNAPSHOT"

repositories {
    mavenCentral()
    maven { // Spigot Repository
        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
    }
    maven { // Paper Repository
        url = "https://papermc.io/repo/repository/maven-public/"
    }
}

dependencies {
    compileOnly "com.destroystokyo.paper:paper-api:$paperVersion"
}


// Fix for UTF-8 files showing with wrong encoding when compiled on Windows machines.
compileJava { options.encoding = "UTF-8" }
tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
javadoc { options.encoding = 'UTF-8' }

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8